@@ -117,6 +117,7 @@ kh_dun01	mapflag	noteleport
 ve_in	mapflag	noteleport
 ve_in02	mapflag	noteleport
 thor_camp	mapflag	noteleport
+moc_para01	mapflag	noteleport
 
 // Job Quests ====================
 job_sword1	mapflag	noteleport
